--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,19 @@ header div.head {
   
 }
 
+.form-group {
+  display: grid;
+  grid-template-columns: 50% 0%;
+  margin: 10px 0px;
+}
+
+.form-group2{
+  text-align: center;
+  display: grid;
+  grid-template-columns: 40% 50%;
+  margin: 10px 0px;
+}
+
 header div.head  {
   color: #222;
 
@@ -372,7 +385,7 @@ main section form div textarea {
 }
 
 
-footer {
+/* footer {
   background: rgb(0, 99, 248);
   color: #fff;
   padding: 20px;
@@ -396,7 +409,7 @@ footer ul {
 
 footer ul li a {
   color: #eee;
-}
+} */
 
 
 @media (max-width:1310px) and (min-width:1100px) {
